--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@mantine/form": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
     "@mantine/notifications": "^8.3.13",
+    "@tabler/icons-react": "^3.36.1",
     "axios": "^1.13.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
