--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^8.3.13",
-    "@mantine/form": "^8.3.13",
-    "@mantine/hooks": "^8.3.13",
-    "@mantine/notifications": "^8.3.13",
+    "@mantine/core": "^8.3.14",
+    "@mantine/form": "^8.3.14",
+    "@mantine/hooks": "^8.3.14",
+    "@mantine/notifications": "^8.3.14",
     "@tabler/icons-react": "^3.36.1",
-    "axios": "^1.13.2",
+    "axios": "^1.13.5",
+    "exceljs": "^4.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "vite-plugin-svgr": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
